implemented -count-commas

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ TAGS
 *.tex
 *.gz
 *.xz
+README.html
+doc/gh-page.html
+helper/emacs-24.5
+helper/hide-region+.el
+helper/hide-region.el
+helper/htmlize.el
+helper/share
