rewriting default.el in default.org

--- a/helper/makefile
+++ b/helper/makefile
@@ -106,7 +106,7 @@ MODE : $(PACKAGE)
 
 $(A-M_EMACS_SOURCE_PACKAGE) : $(PACKAGE_FILES) $(EMACS_SOURCE_PACKAGE) makefile  $(A-M_EMACS_SOURCE_PACKAGE)
 	tar -xJvf $(EMACS_SOURCE_PACKAGE) 
-	cp -uv $(PACKAGE_FILES) $(EMACS_VERSION)/site-lisp
+	cp -uvr $(PACKAGE_FILES) $(EMACS_VERSION)/site-lisp
 	tar -cJvf $(A-M_EMACS_SOURCE_PACKAGE) $(EMACS_VERSION)
 
 .PHONEY : EMACS_SRC
