typo in makefile

--- a/helper/makefile
+++ b/helper/makefile
@@ -134,7 +134,7 @@ html.tar.xz : $(HTMLs) makefile
 	rm $(HTMLs)
 
 .PHONEY : ALL
-ALL : MODE EMACS EMACS_SRC HTML pTAGS
+ALL : MODE EMACS EMACS_SRC HTML TAGS
 
 .PHONEY : CLEAN
 CLEAN :
